[package]
name = "solana_hackson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
arrayref = "0.3.6"
solana-program = "1.18.1"
pyth-sdk-solana = "0.10.0"
